--- a/question1.ipynb
+++ b/question1.ipynb
@@ -44,6 +44,59 @@
     "\n",
     "print(f\"Line parameters: a={a}, b={b}, c={c}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "af124f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1: y = 0.6784x + -0.2748\n",
+      "Line 2: y = 0.2356x + -0.1044\n",
+      "Line 3: y = 0.3898x + -1.9842\n"
+     ]
+    }
+   ],
+   "source": [
+    "#part b\n",
+    "from sklearn.linear_model import RANSACRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "D = np.genfromtxt('lines.csv', delimiter=',', skip_header=1)\n",
+    "\n",
+    "X_cols = D[:, :3]  # x1, x2, x3\n",
+    "y_cols = D[:, 3:] # y1, y2, y3\n",
+    "\n",
+    "X_all = X_cols.flatten().reshape(-1, 1)\n",
+    "y_all = y_cols.flatten()\n",
+    "\n",
+    "remaining_X = X_all\n",
+    "remaining_y = y_all\n",
+    "\n",
+    "lines = []\n",
+    "\n",
+    "for i in range(3):\n",
+    "    ransac = RANSACRegressor(LinearRegression(), min_samples=50, residual_threshold=0.5, random_state=0)\n",
+    "\n",
+    "    ransac.fit(remaining_X, remaining_y)\n",
+    "    inlier_mask = ransac.inlier_mask_\n",
+    "\n",
+    "    coef = ransac.estimator_.coef_[0]\n",
+    "    intercept = ransac.estimator_.intercept_\n",
+    "\n",
+    "    lines.append((coef, intercept))\n",
+    "    \n",
+    "    #reemove inliers for next iteration\n",
+    "    remaining_X = remaining_X[~inlier_mask]\n",
+    "    remaining_y = remaining_y[~inlier_mask]\n",
+    "\n",
+    "for i, (m,c) in enumerate(lines):\n",
+    "    print(f\"Line {i+1}: y = {m:.4f}x + {c:.4f}\")"
+   ]
   }
  ],
  "metadata": {
